# ReasonForge

./: .gitignore
src/infra/: INSTANCE_SETUP.md  README.md  config.yaml  deploy.sh  destroy.sh
src/infra/cloudformation/: 01-s3-buckets.yaml  02-iam-roles.yaml
src/infra/eks/: README.md
src/serve/: main.py  pyproject.toml
src/train/: data_preparation.py  evaluate_model.py  llm_judge_evaluation.py  pyproject.toml  test.ipynb  test_model.py  train_lora.py  utils.py
src/train/docs/: DATA_PREPARATION.md  EVALUATION_REPORT.md  TRAINING_GUIDE.md
src/train/eval_results/: final_evaluation.json  judge_evaluation.json
