[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "boto3>=1.42.14",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2025.12.7",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
